# Darzi-AI-Resume-Suite

./: PROJECT_STRUCTURE.md
backend/: sample_mcp.py
backend/api/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ats_test.json  main.py  pyproject.toml  requirements.txt  resume_test.txt  startup.sh
backend/api/src/: __init__.py  app.py  streamlit_app.py
backend/api/src/api/: __init__.py  main.py  streamlit_app.py
backend/api/src/data_extractor/: core.py
backend/api/src/utils/: __init__.py  parser.py
backend/api/src/utils/ats/: __init__.py  analyzer.py
backend/api/src/utils/data_extractor/: __init__.py  core.py  utils.py
backend/api/src/utils/llm/: __init__.py  base.py  manager.py
backend/api/src/utils/llm/providers/: gemini.py
backend/api/src/utils/parser/: __init__.py  enhanced.py  field_extractor.py
backend/api/src/utils/resume_generator/: __init__.py  core.py  templates.py
backend/local_mcp/: client.py  requirements.txt  server.py
backend/resume_mcp/: resume_server.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/app/Dashboard/: page.tsx
frontend/app/Dashboard/components/: header.tsx
frontend/app/about/: page.tsx
frontend/app/generate-resume/: page.tsx
frontend/app/resume-editor/: page.tsx
frontend/app/templates/: ClassicResume.tsx  CreativeResume.tsx  ModernResume.tsx  page.tsx
frontend/components/: animated-group.tsx  header.tsx  hero-section.tsx
frontend/components/main/: sidebar.tsx
frontend/data/: resume-schema.json
frontend/types/: resume.ts
